--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,37 @@
+# Node modules
+node_modules/
+client/node_modules/
+server/node_modules/
+
+# Vite / build outputs
+dist/
+build/
+.vite/
+
+# TypeScript
+*.tsbuildinfo
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Env files
+.env
+.env.local
+.env.*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS / editor
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+.vscode/
+.idea/
+
+# Coverage / test
+coverage/
+
+# Misc
+*.local
+*.cache
