--- a/package.json
+++ b/package.json
@@ -1,36 +1,22 @@
 {
-  "name": "revealr",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "private": true,
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "bootstrap": "npm install --workspaces",
+    "start": "npm --workspaces run start",
+    "start:server": "npm --workspace ./server run start",
+    "start:client": "npm --workspace ./client run start"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.15",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4",
-    "tailwindcss": "^4.1.15"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^0.0.1-security"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.14"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
+    "nodemon": "^3.1.10"
   }
 }
