--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
     "@tailwindcss/vite": "^4.1.15",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
+    "supabase": "^2.58.5",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
